Ändrat på texten placeholder.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div id="menu">
                     <a href="#">Kontakt</a>
-                    <input type="search" placeholder="Lägg upp händelse...">
+                    <input type="search" placeholder="Välj organisation">
                 </div>
             </nav>
         </header>
