lagt till början av formulär

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="frontpage">
         <header>
             <nav>
                 <a>Stockholms Stadsmission</a>
@@ -17,8 +17,8 @@
                 <a href="#" id="menu-btn" class="mobile-only">Menu</a>
 
                 <div id="menu">
-                    <a href="#">Kontakt</a>
                     <input type="search" placeholder="Välj organisation">
+                    <a href="#">Kontakt</a>
                 </div>
             </nav>
         </header>
