--- a/registrera_hand.html
+++ b/registrera_hand.html
@@ -9,7 +9,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
-
-
+    <div class="container">
+        <form>
+            <label for="enhet-name">Enhetens benämning på händelsen:*</label>
+            <input type="text" id="enhet-name" name="enhet-name">
+            <label for="antal">Antal deltagare:</label>
+            <input type="text" id="antal" name="antal">
+        </form>
+    </div>
     
 </html>
