påbörjat formuläret och lite design

--- a/registrera_del.html
+++ b/registrera_del.html
@@ -10,20 +10,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
-        <form>
-            <label for="UNO">UNO-kod:*</label>
-            <input type="text" id="UNO" name="UNO">
-            <label for="fname">Förnamn:</label>
-            <input type="text" id="fname" name="fname">
-            <label for="lname">Efternamn:</label>
-            <input type="text" id="lname" name="lname">
-            <label for="birthyear">Födelseår (barn):</label>
-            <input type="text" id="birthyear" name="birthyear">
-            <label for="language">Språk:</label>
-            <input type="text" id="language" name="language">
-            <label for="land">Land:</label>
-            <input type="text" id="land" name="land">
-        </form>
-
+        <div class="container">
+            <form>
+                <label for="UNO">UNO-kod:</label>
+                <input type="text" id="UNO" name="UNO">
+                <label for="fname">Förnamn:</label>
+                <input type="text" id="fname" name="fname">
+                <label for="lname">Efternamn:</label>
+                <input type="text" id="lname" name="lname">
+                <label for="birthyear">Födelseår(barn):</label>
+                <input type="text" id="birthyear" name="birthyear">
+                <label for="language">Språk:</label>
+                <input type="text" id="language" name="language">
+                <label for="land">Land:</label>
+                <input type="text" id="land" name="land">
+            </form>
+        </div>
     </body>
 </html>
