--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 
         <section id="jumbo">
             <article>
-                <h2>Mäta och rapportera</h2>
-                     <a href="#">Rapportera</a>
-                     <a href="#">Följa upp</a>
-                     <h2>Redigera</h2>
-                     <a href="#">Händelse</a>
-                     <a href="#">Deltagare</a>
+                <h2>DIGGINS</h2>
+                <select id="valdenhet" name="valdenhet" form="enhetsform">
+                    <option value="enhet1">Enhet 1</option>
+                    <option value="enhet2">Enhet 2</option>
+                    <option value="enhet3">Enhet 3</option>
+                    <option value="enhet4">Enhet 4</option> 
+                </select>
             </article>
         </section>
     </html>
