--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="jumbo">
             <article>
                 <h2>DIGGINS</h2>
-                <select id="valdenhet" name="valdenhet" form="enhetsform">
+                <select id="enhetsval" name="valdenhet" form="enhetsform">
                     <option value="enhet1">Enhet 1</option>
                     <option value="enhet2">Enhet 2</option>
                     <option value="enhet3">Enhet 3</option>
