--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Stockholms Stadsmission</title>
-        <link th:href="@{style.css}" rel="stylesheet">
+        <link href="static/style.css" @{style.css} rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
