--- a/meny.html
+++ b/meny.html
@@ -2,36 +2,29 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8">
-        <title>Stockholms Stadsmission</title>
         <link href="static/style.css" rel="stylesheet">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    </head>
-    <body id="frontpage">
-        <header>
-            <nav>
-                <a>Stockholms Stadsmission</a>
-
-                <a href="#" id="menu-btn" class="mobile-only">Menu</a>
-
-                <div id="menu">
-                    <input type="search" placeholder="Välj organisation">
-                    <a href="#">Kontakt</a>
-                </div>
-            </nav>
-        </header>
-
-
-        <section id="jumbo">
-            <article>
-                <h2>Mäta och rapportera</h2>
-                     <a href="#">Rapportera</a>
-                     <a href="#">Följa upp</a>
-                     <h2>Redigera</h2>
-                     <a href="#">Händelse</a>
-                     <a href="#">Deltagare</a>
-            </article>
-        </section>
-    </html>
+        <title>Stockholms Stadsmission: DIGGINS Rapporteringsverktyg</title>
+        </head>
+        <body>
+            <div id="menu">
+                <a href="index.html"><img src="ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+                <h1>DIGGINS</h1>
+            </div>
+        
+            <section id="jumbo">
+                <article>
+                    <button><a href="registrera_hand.html">Registrera</a></button>
+                    <button>Statistik</button>
+                    <h2>Redigera</h2> img symbol
+                    <button>Aktivitet</button>
+                    <button>Deltagare</button>
+                </article>
+            </section>
+        
+        </body>
+        </html>
