--- a/meny.html
+++ b/meny.html
@@ -12,7 +12,7 @@
         </head>
         <body>
             <div id="menu">
-                <a href="index.html"><img src="ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+                <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
                 <h1>DIGGINS</h1>
             </div>
         
