--- a/registrera_del.html
+++ b/registrera_del.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
-        
+
         <div id="menu">
             <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
@@ -18,7 +18,7 @@
 
         <nav>
             <h2><a href="registrera_hand.html">Aktivitet</a></h2>
-            <h2><a href="registrera_hand.html">Deltagare</a></h2>
+            <h2><a href="registrera_del.html">Deltagare</a></h2>
         </nav>
 
         <section id="folder">
