--- a/registrera_hand.html
+++ b/registrera_hand.html
@@ -19,7 +19,7 @@
 
         <nav>
             <h2><a href="registrera_hand.html">Aktivitet</a></h2>
-            <h2><a href="registrera_hand.html">Deltagare</a></h2>
+            <h2><a href="registrera_del.html">Deltagare</a></h2>
         </nav>
 
         <section id="folder">
