--- a/meny.html
+++ b/meny.html
@@ -11,7 +11,7 @@
         <title>Stockholms Stadsmission: DIGGINS Rapporteringsverktyg</title>
     </head>
     <body>
-        
+
         <div id="menu">
             <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
@@ -20,7 +20,7 @@
          <section id="jumbo">
                 <article>
                 <button><a href="registrera_hand.html">Registrera</a></button>
-                <button>Statistik</button>
+                <button><a href="foljaupp.html">Statistik</a></button>
                 <h2>Redigera</h2> img symbol
                 <button>Aktivitet</button>
                 <button>Deltagare</button>
