--- a/meny.html
+++ b/meny.html
@@ -21,7 +21,7 @@
                 <article>
                 <button><a href="registrera_hand.html">Registrera</a></button>
                 <button><a href="foljaupp.html">Statistik</a></button>
-                <h2>Redigera</h2> <img src="static/edit.png" alt="Edit-icon">
+                <h2>Redigera</h2> <img src="static/edit.png" alt="edit-icon" id="edit-icon">
                 <button>Aktivitet</button>
                 <button>Deltagare</button>
                </article>
