--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -18,8 +18,8 @@
         </div>
 
         <nav>
-            <h2><a href="registrera_hand.html">Aktivitet</a></h2>
-            <h2><a href="registrera_del.html">Deltagare</a></h2>
+            <h2><a href="reg-handelse.html">Aktivitet</a></h2>
+            <h2><a href="reg-deltagare.html">Deltagare</a></h2>
         </nav>
 
         <section id="folder">
