--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="sv">
     <head>
@@ -17,6 +19,8 @@
             <h1>DIGGINS</h1>
         </div>
 
+
+<form action="/meny" method="post">
         <section id="jumbo">
             <article>
                 <h2>Välj enhet:</h2>
@@ -26,7 +30,7 @@
                 <button><a href="meny.html">OK</a></button>
                 </article>
             </section>
-
+</form>
 
     </body>
 </html>
