--- a/foljaupp.html
+++ b/foljaupp.html
@@ -10,17 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <nav>
-                <a>Stockholms Stadsmission</a>
-
-                <a href="#" id="menu-btn" class="mobile-only">Menu</a>
-
-                <div id="menu">
-                    <input type="search" placeholder="Namn på vald enhet...">
-                </div>
-            </nav>
-        </header>
+      
+      <div id="menu">
+        <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+        <h1>DIGGINS</h1>
+    </div>
 
 
         <section id="jumbo">
