--- a/meny.html
+++ b/meny.html
@@ -19,7 +19,7 @@
         
          <section id="jumbo">
                 <article>
-                <button><a href="registrera_hand.html">Registrera</a></button>
+                <button><a href="reg-handelse.html">Registrera</a></button>
                 <button><a href="foljaupp.html">Statistik</a></button>
                 <h2>Redigera</h2><img src="static/edit.png" alt="edit-icon" id="edit-icon">
                 <button>Aktivitet</button>
