--- a/meny.html
+++ b/meny.html
@@ -14,7 +14,7 @@
 
         <div id="menu">
             <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1>DIGGINS</h1>
+            <h1><a href="index.html">DIGGINS</a></h1>
         </div>
         
          <section id="jumbo">
