lagt till div edit

--- a/meny.html
+++ b/meny.html
@@ -21,7 +21,9 @@
                 <article>
                 <button><a href="reg-handelse.html">Registrera</a></button>
                 <button><a href="foljaupp.html">Statistik</a></button>
-                <h2>Redigera</h2><img src="static/edit.png" alt="edit-icon" id="edit-icon">
+                <div id="edit">
+                    <h2>Redigera</h2><img src="static/edit.png" alt="edit-icon" id="edit-icon">
+                </div>
                 <button>Aktivitet</button>
                 <button>Deltagare</button>
                </article>
