button side 2 side

--- a/meny.html
+++ b/meny.html
@@ -24,8 +24,10 @@
                 <div id="edit">
                     <h2>Redigera</h2><img src="static/edit.png" alt="edit-icon" id="edit-icon">
                 </div>
-                <button>Aktivitet</button>
-                <button>Deltagare</button>
+                <div id="buttonside2side">
+                    <button>Aktivitet</button>
+                    <button>Deltagare</button>
+                </div>
                </article>
          </section>
         
