--- a/foljaupp.html
+++ b/foljaupp.html
@@ -19,7 +19,7 @@
 
         <section id="jumbo">
             <article>
-                <h2>Följa upp:</h2> 
+                <h2 class="title">Följa upp:</h2> 
                 <select id="selUser">
                     <option value="0">Välj enhet...</option> 
                     <option value="1">Enhet 1</option> 
