ändrat namn på IDs

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -20,14 +20,14 @@
         <section id="jumbo">
             <article>
                 <h2 class="title">Följa upp:</h2> 
-                <select id="selUser">
+                <select id="sel-user">
                     <option value="0">Välj enhet...</option> 
                     <option value="1">Enhet 1</option> 
                     <option value="2">Enhet 2</option> 
                     <option value="3">Enhet 3</option> 
                </select>
                
-               <input type='button' value='Seleted option' id='but_read'>
+               <input type='button' value='Selected option' id='but_read'>
             </article>
         </section>
 
