--- a/foljaupp.html
+++ b/foljaupp.html
@@ -21,13 +21,13 @@
             <article>
                 <h2 class="title">Följa upp:</h2> 
                 <select id="sel-user">
-                    <option value="0">Välj enhet...</option> 
-                    <option value="1">Enhet 1</option> 
-                    <option value="2">Enhet 2</option> 
-                    <option value="3">Enhet 3</option> 
+                    <option value="0">Välj händelse...</option> 
+                    <option value="1">Händelse 1</option> 
+                    <option value="2">Händelse 2</option> 
+                    <option value="3">Händelse 3</option> 
                </select>
                
-               <input type='button' value='Selected option' id='but_read'>
+               <button>OK</button>
             </article>
         </section>
 
