skapat selector class

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -20,7 +20,7 @@
         <section id="jumbo">
             <article>
                 <h2 class="title">Följa upp:</h2> 
-                <select id="sel-user">
+                <select id="selector">
                     <option value="0">Välj händelse...</option> 
                     <option value="1">Händelse 1</option> 
                     <option value="2">Händelse 2</option> 
