ändrat bakgrunden på följa-upp sidan

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -17,7 +17,7 @@
     </div>
 
 
-        <section id="jumbo">
+        <section id="historik-bakgrund">
             <article>
                 <h2 class="title">Följa upp:</h2> 
                 <select id="selector">
