lagt till class "active"
inte klar med CSSn för den än

--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -18,7 +18,7 @@
         </div>
 
         <nav>
-            <h2><a href="reg-handelse.html">Aktivitet</a></h2>
+            <h2 class="active"><a href="reg-handelse.html">Aktivitet</a></h2>
             <h2><a href="reg-deltagare.html">Deltagare</a></h2>
         </nav>
 
