--- a/meny.html
+++ b/meny.html
@@ -25,8 +25,8 @@
                     <h2>Redigera</h2><img src="static/edit.png" alt="edit-icon" id="edit-icon">
                 </div>
                 <div id="buttonside2side">
-                    <button>Aktivitet</button>
-                    <button>Deltagare</button>
+                    <button><a href="#">Aktivitet</a></button>
+                    <button><a href="#">Deltagare</a></button>
                 </div>
                </article>
          </section>
