--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <article>
                 <h2 class="title">Välj enhet:</h2>
                 <select id="selector" name="valdenhet" form="enhetsform">
-                    <option th:each="activity: ${activites}" th:value="${activity.id}" th:text="${activity.activityId}"></option>
+                    <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
                     </select>
                 <button><a href="meny.html">OK</a></button>
                 </article>
