Uppdaterad logga & sökväg. Index länkar korrekt till meny.html via form.

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -10,23 +10,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
-      
+
       <div id="menu">
-        <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-        <h1><a href="index.html">DIGGINS</a></h1>
+        <a href="/"><img src="static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+        <h1><a href="/">DIGGINS</a></h1>
     </div>
 
 
         <section id="historik-bakgrund">
             <article>
-                <h2 class="title">Följa upp:</h2> 
+                <h2 class="title">Följa upp:</h2>
                 <select id="selector">
-                    <option value="0">Välj händelse...</option> 
-                    <option value="1">Händelse 1</option> 
-                    <option value="2">Händelse 2</option> 
-                    <option value="3">Händelse 3</option> 
+                    <option value="0">Välj händelse...</option>
+                    <option value="1">Händelse 1</option>
+                    <option value="2">Händelse 2</option>
+                    <option value="3">Händelse 3</option>
                </select>
-               
+
                <button>OK</button>
             </article>
         </section>
