--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -12,8 +12,8 @@
     <body>
 
         <div id="menu">
-            <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1><a href="index.html">DIGGINS</a></h1>
+            <a href="/"><img src="static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+            <h1><a href="/">DIGGINS</a></h1>
         </div>
 
         <nav>
