--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -13,8 +13,8 @@
     <body>
 
         <div id="menu">
-            <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1><a href="index.html">DIGGINS</a></h1>
+            <a href="/"><img src="static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+            <h1><a href="/">DIGGINS</a></h1>
         </div>
 
         <nav>
@@ -32,7 +32,7 @@
                         <option value="ex1">Exempel 1</option>
                         <option value="ex2">Exempel 2</option>
                         <option value="ex3">Exempel 3</option>
-                        <option value="ex4">Exempel 4</option> 
+                        <option value="ex4">Exempel 4</option>
                         </select>
                     <label for="antal">Antal deltagare:</label>
                     <input type="text" id="antal" name="antal">
@@ -45,6 +45,6 @@
                 <button>Registrera händelse</button>
             </article>
         </section>
-        
+
     </body>
 </html>
