--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@
         <title>Stockholms Stadsmission: DIGGINS Rapporteringsverktyg</title>
     </head>
     <body>
-    
+
         <div id="menu">
-            <a href="index.html"><img src="static/ssm-logga utan bakgrund.png" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1><a href="index.html">DIGGINS</a></h1>
+            <a href="/"><img src="static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+            <h1><a href="/">DIGGINS</a></h1>
         </div>
 
 
-<form action="/meny" method="post">
-        <section id="jumbo">
-            <article>
-                <h2 class="title">Välj enhet:</h2>
-                <select id="selector" name="valdenhet" form="enhetsform">
-                    <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
+        <form action="/meny" method="get" id="enhetsform">
+            <section id="jumbo">
+                <article>
+                    <h2 class="title">Välj enhet:</h2>
+                    <select id="selector" name="vald_enhet" form="enhetsform">
+                        <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
                     </select>
-                <button><a href="meny.html">OK</a></button>
-            </article>
-        </section>
-</form>
-
+                    <button>OK</button>
+                </article>
+            </section>
+        </form>
     </body>
 </html>
