Registrera händelse knappen 1

--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -42,7 +42,9 @@
                         <span class="slider round"></span>
                     </label>
                 </form>
+                <select id="register">
                 <button>Registrera händelse</button>
+            </select>
             </article>
         </section>
 
