--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -24,6 +24,15 @@
         <section id="folder">
             <article>
                 <form>
+                    <section id="info1">
+                        <label for="language">Språk:</label>
+                        <input type="text" id="language" name="language">
+                        <label for="land">Land:</label>
+                        <input type="text" id="land" name="land">
+                        <button>Registrera deltagare</button>
+
+                </section>
+                <section id="info2">
                     <label for="UNO">UNO-kod:</label>
                     <input type="text" id="UNO" name="UNO">
                     <label for="fname">Förnamn:</label>
@@ -32,11 +41,9 @@
                     <input type="text" id="lname" name="lname">
                     <label for="birthyear">Födelseår(barn):</label>
                     <input type="text" id="birthyear" name="birthyear">
-                    <label for="language">Språk:</label>
-                    <input type="text" id="language" name="language">
-                    <label for="land">Land:</label>
-                    <input type="text" id="land" name="land">
-                    <button>Registrera deltagare</button>
+
+                </section>
+                    
                 </form>
             </article>
         </section>
