Alla länkar fungerar nu som de ska.

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Stockholms Stadsmission</title>
-        <link href="static/style.css" rel="stylesheet">
+        <link href="/static/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
     <body>
 
       <div id="menu">
-        <a href="/"><img src="static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+        <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
         <h1><a href="/">DIGGINS</a></h1>
     </div>
 
