Css på formuläret i registrera sidorna

--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -23,18 +23,10 @@
             <h2 class="active"><a th:href="'/reg_del/'+${costCenterId}">Deltagare</a></h2>
         </nav>
 
-        <section id="folder">
+        <section id="folder1">
             <article>
                 <form>
                     <section id="info1">
-                        <label for="language">Språk:</label>
-                        <input type="text" id="language" name="language">
-                        <label for="land">Land:</label>
-                        <input type="text" id="land" name="land">
-                        <button>Registrera deltagare</button>
-
-                </section>
-                <section id="info2">
                     <label for="UNO">UNO-kod:</label>
                     <input type="text" id="UNO" name="UNO">
                     <label for="fname">Förnamn:</label>
@@ -43,9 +35,15 @@
                     <input type="text" id="lname" name="lname">
                     <label for="birthyear">Födelseår(barn):</label>
                     <input type="text" id="birthyear" name="birthyear">
-
                 </section>
+                <section id="info2">
                     
+                    <label for="language">Språk:</label>
+                    <input type="text" id="language" name="language">
+                    <label for="land">Land:</label>
+                    <input type="text" id="land" name="land">
+                    <button>Registrera deltagare</button>
+                </section>
                 </form>
             </article>
         </section>
