--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -21,7 +21,7 @@
 
         <nav>
             <h2 class="active"><a th:href="'/reg_hand/'+${costCenterId}">Aktivitet</a></h2>
-            <h2><a th:href="'/reg_del/'+${costCenterId}">Deltagare</a></h2>
+            <h2><a th:href="'/reg_del/'+${costCenterId}">Ny Deltagare</a></h2>
         </nav>
 
         <section id="folder">
