--- a/foljaupp.html
+++ b/foljaupp.html
@@ -8,6 +8,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="/resources/demos/style.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     </head>
     <body>
 
@@ -18,9 +22,9 @@
 
 
         <section id="historik-bakgrund">
-
+            <p>Date: <input type="text" id="datepicker"></p>
         </section>
-
+        <script src="script.js"></script>
     </body>
 
 </html>
