Länkarna till knaparna funkar så att man navigera mellan sidorna

--- a/meny.html
+++ b/meny.html
@@ -21,8 +21,8 @@
 
          <section id="jumbo">
             <article>
-                <button><a th:href="'/reg_hand/'+${costCenterId}">Registrera</a></button>
-                <button><a th:href="'/foljaupp/'+${costCenterId}">Statistik</a></button>
+                <button><a href="reg-handelse.html">Registrera</a></button>
+                <button><a href="foljaupp.html">Statistik</a></button>
                 <div id="edit">
                     <h2>Redigera</h2><img src="/static/edit.png" alt="edit-icon" id="edit-icon">
                 </div>
