--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <select id="selector" name="vald_enhet" form="enhetsform">
                         <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
                     </select>
-                    <button><a href = "meny.html">OK</a></button> 
+                    <button><a href = "reg-handelse.html">OK</a></button> 
                 </article>
             </section>
         </form>
