--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -19,8 +19,9 @@
         </div>
 
         <nav>
-            <h2><a href="reg-handelse.html">Aktivitet</a></h2>
+            <h2><a href="ankommande.html">Ankommande</a></h2>
             <h2 class="active"><a href="reg-deltagare.html">Ny Deltagare</a></h2>
+            <h2><a href="reg-handelse.html">Aktivitet</a></h2>
         </nav>
 
         <section id="folder1">
