--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -20,8 +20,10 @@
         </div>
 
         <nav>
+            <h2><a href="ankommande.html">Ankommande</a></h2>
+            <h2><a href="ankommande.html">Ny Deltagare</a></h2>
             <h2 class="active"><a href="reg-handelse.html">Aktivitet</a></h2>
-            <h2><a href="reg-deltagare.html">Ny Deltagare</a></h2>
+
         </nav>
 
         <section id="folder">
