--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -13,9 +13,10 @@
 
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1><a href="/">DIGGINS</a></h1>
+            <h1>DIGGINS</h1>
             <!--/*@thymesVar id="costCenterName" type="se.mau.webbserver.entity.cost_center.CostCenter"*/-->
             <span id="chosen" th:text="${costCenterName}"></span>
+            <section id="button1">Dagsrapporter</section>
         </div>
 
         <nav>
