--- a/foljaupp.html
+++ b/foljaupp.html
@@ -17,7 +17,7 @@
 
       <div id="menu">
         <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-        <h1><a href="/">DIGGINS</a></h1>
+        <h1>DIGGINS</h1>
     </div>
 
 
