--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1><a href="/">DIGGINS</a></h1>
+            <h1>DIGGINS</h1>
         </div>
 
 
@@ -25,7 +25,7 @@
                     <select id="selector" name="vald_enhet" form="enhetsform">
                         <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
                     </select>
-                    <button><a href = "reg-handelse.html">OK</a></button> 
+                    <button><a href = "ankommande.html">OK</a></button> 
                 </article>
             </section>
         </form>
