--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -18,6 +18,7 @@
             <!--/*@thymesVar id="costCenterName" type="se.mau.webbserver.entity.cost_center.CostCenter"*/-->
             <span id="chosen" th:text="${costCenterName}"></span>
             <section id="button1">Dagsrapporter</section>
+            <section id="button1"><a href="foljaupp.html">Dagsrapporter</a></section>
         </div>
 
         <nav>
