--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -16,7 +16,7 @@
             <h1>DIGGINS</h1>
             <!--/*@thymesVar id="costCenterName" type="se.mau.webbserver.entity.cost_center.CostCenter"*/-->
             <span id="chosen" th:text="${costCenterName}"></span>
-            <section id="button1">Dagsrapporter</section>
+            <section id="button1"><a href="foljaupp.html">Dagsrapporter</a></section>
         </div>
 
         <nav>
