Ändrat alla länkar till att fungera med hemsidan.

--- a/ankommande.html
+++ b/ankommande.html
@@ -16,16 +16,13 @@
             <h1>DIGGINS</h1>
             <!--/*@thymesVar id="costCenterName" type="se.mau.webbserver.entity.cost_center.CostCenter"*/-->
             <span id="chosen" th:text="${costCenterName}"></span>
-            <section id="button1"><a href="foljaupp.html">Dagsrapporter</a></section>
-
- 
+            <section id="button1"><a th:href="'/foljaupp/'+${costCenterId}">Dagsrapporter</a></section>
         </div>
 
         <nav>
-
-            <h2 class="active"><a href="ankommande.html">Ankommande</a></h2>
-            <h2><a href="reg-deltagare.html">Ny Deltagare</a></h2>
-            <h2><a href="reg-handelse.html">Aktivitet</a></h2>
+            <h2 class="active"><a th:href="'/ankommande/'+${costCenterId}">Ankommande</a></h2>
+            <h2><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
+            <h2><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
         </nav>
 
         <section id="folder1">
@@ -37,7 +34,6 @@
                     <label for="fname">Datum</label>
                     <input type="text" id="fname" name="fname">
                     <button>Ok</button>
-                </section>
                 </section>
                 </form>
             </article>
