--- a/foljaupp.html
+++ b/foljaupp.html
@@ -15,16 +15,16 @@
     </head>
     <body>
 
-      <div id="menu">
-        <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-        <h1>DIGGINS</h1>
-    </div>
+        <div id="menu">
+            <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+            <h1>DIGGINS</h1>
+        </div>
 
 
         <section id="historik-bakgrund">
             <p>Date: <input type="text" id="datepicker"></p>
         </section>
-        <script src="script.js"></script>
+        <script src="/script.js" defer></script>
     </body>
 
 </html>
