--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
 
 
-        <form action="/meny" method="get" id="enhetsform">
+        <form action="/ankommande" method="get" id="enhetsform">
             <section id="jumbo">
                 <article>
                     <h2 class="title">Välj enhet:</h2>
                     <select id="selector" name="vald_enhet" form="enhetsform">
                         <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
                     </select>
-                    <button><a href = "ankommande.html">OK</a></button> 
+                    <button type="submit">OK</button>
                 </article>
             </section>
         </form>
