--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -16,13 +16,13 @@
             <h1>DIGGINS</h1>
             <!--/*@thymesVar id="costCenterName" type="se.mau.webbserver.entity.cost_center.CostCenter"*/-->
             <span id="chosen" th:text="${costCenterName}"></span>
-            <section id="button1"><a href="foljaupp.html">Dagsrapporter</a></section>
+            <section id="button1"><a th:href="'/foljaupp/'+${costCenterId}">Dagsrapporter</a></section>
         </div>
 
         <nav>
-            <h2><a href="ankommande.html">Ankommande</a></h2>
-            <h2 class="active"><a href="reg-deltagare.html">Ny Deltagare</a></h2>
-            <h2><a href="reg-handelse.html">Aktivitet</a></h2>
+            <h2><a th:href="'/ankommande/'+${costCenterId}">Ankommande</a></h2>
+            <h2 class="active"><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
+            <h2><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
         </nav>
 
         <section id="folder1">
@@ -39,7 +39,7 @@
                     <input type="text" id="birthyear" name="birthyear">
                 </section>
                 <section id="info2">
-                    
+
                     <label for="language">Språk:</label>
                     <input type="text" id="language" name="language">
                     <label for="land">Land:</label>
